# football-wc2026

./: .gitignore  Makefile  dvc.yaml  params.yaml  pyproject.toml
cli/: __init__.py  features.py  scrape.py
configs/: data.yaml  team_name_mapping.json
src/: __init__.py
src/features/: README.md  __init__.py  home_advantage.py  match_features.py  pipeline.py  team_features.py  weight_decay.py
src/scraping/: README.md  __init__.py  _http.py  elo_ratings.py  fifa_rankings.py  football_data.py  pipeline.py  transfermarkt.py
src/utils/: __init__.py  config.py  logging.py
tests/: conftest.py
tests/unit/: test_features.py  test_scraping.py
